2004-08-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (discard_alarm):
	Moved this from e-cal-backend-exchange.c, since this should be in the
	calendar derived class and not in the abstract class. This fixes #45103
	* calendar/e-cal-backend-exchange.c (discard_alarm): Now just returns
	an error
	(remove_calendar): Removed some warnings.
 
2004-08-12  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-context.c (write_prop): Checking for value of property
	being NULL. This fixes the crash #62259, But Internet Newsgroup 
	folder disappears from favorite folders list on restart, which 
	needs to be fixed.

2004-08-11  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_changed):
	Removing the source groups with old account name, when account
	name is changed.  Fixes #61332

2004-08-09  Ankit Patel <ankit@redhat.com>

	* configure.in: Added Gujarati & Panjabi

2004-08-07  Runa Bhattacharjee <runab@redhat.com>

	* configure.in: Added Bengali (bn) Locale

2004-08-07  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (get_folder_info): Handling 
	favorite folder and foreign folder hierarchies, to display
	users favorite public mail folders and subscribed mail folders.	
	(account_new_folder): ditto
	(account_removed_folder): ditto 

2004-08-05  Dan Winship  <danw@novell.com>

	* lib/e2k-context.c (e2k_context_transfer_start): Make this split
	the source_hrefs into groups of E2K_CONTEXT_MAX_BATCH_SIZE so that
	we don't freak out the server when moving large numbers of
	messages. (Eg, deleting everything in my Spam folder.)

2004-08-05  Sushma Rai <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_remove): Returning error, instead of 
	disabling delete option in contacts view. 
	
	* calendar/e-cal-backend-exchange.c (remove_calendar): ditto
	Temporary fix for #57129.

2004-08-05  Sarfraaz Ahmed <asarfraaz@novell.com>
	